fix footer link spacing - link icons

--- a/css/global/global.sass
+++ b/css/global/global.sass
@@ -170,4 +170,9 @@ body
         .footer-logos 
             ul 
                 display: flex
+                margin-top: 20px
+                list-style: none
+
+                li 
+                    margin-right: 10px
 
